# bob

./: .bandit.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  TODO.md  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: github-release.yaml  linters.yaml  publish-to-pypi.yaml  type-checking.yaml  unit-testing.yaml  unit-testing.yml
bob/: __init__.py  __main__.py  api.py  bob.py  bootstrap.py  cli.py  common.py  compat.py  configure.py  debug.py  format.py  modules.py  typehints.py
bob/tasks/: __init__.py  bootstrap.py  build.py  configure.py  format.py  install.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  design.rst  index.rst  usage.rst
src/bob/: __init__.py  api.py  bob.py  bootstrap.py  build.py  cli.py  common.py  compat.py  configure.py  debug.py  format.py  test.py  typehints.py
src/bob/templates/: FindBob.cmake
tests/: __init__.py  test_api.py  test_bob.py  test_bootstrap.py  test_build.py  test_cli.py  test_configure.py  test_example.py  test_install.py
tests/config/: bob.toml  invalid.toml
tests/ref/: bootstrap.cmake
