[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bob-the-developer"
version = "0.2.2"
description = "A collection of scripts to build C++ projects"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "René Moll"}
]
keywords = ["build tool", "c++"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools"
]
dependencies = [
    "docopt",
    "toml",
]

[project.urls]
Repository = "https://github.com/renemoll/bob"
Issues = "https://github.com/renemoll/bob/issues"
# Homepage = "https://github.com/renemoll/bob"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
bob = "bob.cli:main"

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-annotations",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-import-order",
    "pydoclint",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "types-docopt",
    "types-toml",
]
test = [
    "docopt",
    "pytest>=7.4",
    "pytest-cov",
    "pytest-mock",
    "toml",
]
tox = [
    "tox>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']


[tool.coverage]
html.directory = "build/coverage-html/"
paths.source = [
    "bob",
    "*/site-packages"
]
report.show_missing = true
report.fail_under = 95
run.branch = true
run.source = ["bob"]

[tool.pytest.ini_options]
addopts = "--showlocals -vv --cov"
testpaths = ["tests"]

[tool.pydoclint]
style  = "google"

[tool.mypy]
mypy_path = "./bob/;./tests/"
