[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bob-the-developer"
description = "A collection of scripts to build C++ projects"
version = "0.2.4"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "René Moll"}
]
keywords = ["build tool", "c++"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools"
]
dependencies = [
    "docopt",
    "toml",
]

[project.urls]
Repository = "https://github.com/renemoll/bob"
Issues = "https://github.com/renemoll/bob/issues"
# Homepage = "https://github.com/renemoll/bob"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
bob = "bob.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pydoclint",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "types-docopt",
    "types-toml",
]
test = [
    "docopt",
    "pytest>=7.4",
    "pytest-cov",
    "pytest-mock",
    "toml",
]
tox = [
    "tox>=4.0",
]

[tool.setuptools.package-dir]
bob = "bob"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.coverage]
html.directory = "build/coverage-html/"
paths.source = [
    "bob",
    "*/site-packages"
]
report.show_missing = true
report.fail_under = 95
run.branch = true
run.source = ["bob"]

[tool.pytest.ini_options]
addopts = "--showlocals -vv --cov"
testpaths = ["tests"]

[tool.pydoclint]
style  = "google"

[tool.mypy]
mypy_path = "./bob/;./tests/"

[tool.ruff]
target-version = "py38"

line-length = 88
indent-width = 4

pydocstyle.convention = "google"

select = ["ALL"]
ignore = [
    # FA: flake8-future-annotations
    "FA",
    # COM812: trailing comma missing
    "COM812",
    # D203: 1 blank line required before class docstring
    "D203",
    # EM: flake8-errmsg
    "EM",
    # E203: whitespace before ‘,’, ‘;’, or ‘:’
    "E203",
    # E501: line too long
    "E501",
    # B603: subprocess without shell equals true
    "S603",
    # TRY003:
    "TRY003"
]

extend-exclude = ["__init__.py"]

[tool.ruff.extend-per-file-ignores]
"test_*.py" = ["S101"]
