[metadata]
name = bob-renemoll
version = attr: bob.__version__
description = A collection of scripts to build C++ projects
long_description = file: README.rst, LICENSE
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
url = https://github.com/renemoll/bob
project_urls =
    Bug Tracker = https://github.com/renemoll/bob/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    docopt

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = bob:main

[options.extras_require]
testing =
  tox
develop =
  black
  bandit
  flake8
  flake8-bugbear
  flake8-docstrings
  flake8-import-order
  pylint
  pytest
  pytest-cov
  mypy
  types-docopt

[options.packages.find]
where=src

[flake8]
# Matched with black.
max-line-length = 88
select = C,E,F,W,B,B950,D,I
extend-ignore = E203, E501, D203

exclude = .env, .git, .tox
import-order-style = google
application-import-names = bob
