[metadata]
name = bob-renemoll
version = attr: bob.__version__
description = A collection of scripts to build C++ projects
long_description = file: README.rst, LICENSE
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
url = https://github.com/renemoll/bob
project_urls =
    Bug Tracker = https://github.com/renemoll/bob/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    docopt

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    bob = bob.cli:main

[options.extras_require]
testing =
  tox
develop =
  flake8
  flake8-annotations
  flake8-bandit
  flake8-black
  flake8-bugbear
  flake8-docstrings
  flake8-import-order
  darglint
  pylint
  pytest
  pytest-cov
  pytest-mock
  mypy
  types-docopt

[options.packages.find]
where=src

[flake8]
max-line-length = 88
max-complexity = 10
select = ANN,B,B950,BLK,C,D,DAR,E,F,I,S,W
extend-ignore = B404, D203, E203, E501, S404, S603, W503
exclude = .env, .git, .tox
per-file-ignores =
    **/__init__.py:F401
    tests/*.py:S101,E711
# flake8-docstrings
docstring-convention = google
# flake8-import-order
import-order-style = google
application-import-names = bob,tests

[darglint]
docstring_style = google
strictness=short
